# SnetDevice

./: CMakeLists.txt  README.md
cmake/: DefinePlatformSpecifc.cmake  SnetDeviceConfig.cmake.in  SnetDeviceMacros.cmake
include/SnetDevice/: Platform_WIN32.h  SnetDevice.h  UnWindows.h
samples/: CMakeLists.txt
samples/src/: sample.cpp
src/: SnetDevice.cpp
